Add endToEndTest module and task, with a basic test